--- a/cracking_codes/Cargo.toml
+++ b/cracking_codes/Cargo.toml
@@ -10,4 +10,5 @@ chapter_00 = { path = "../chapter_00" }
 chapter_01 = { path = "../chapter_01" }
 chapter_02 = { path = "../chapter_02" }
 chapter_02_a = { path = "../chapter_02_a" }
+chapter_02_b = { path = "../chapter_02_b" }
 common_collections = { path = "../common_collections" }
