--- a/cargo.toml
+++ b/cargo.toml
@@ -1,11 +1,9 @@
-[workspace]
+[package]
+name = "cracking_codes_with_rust"
+version = "0.1.0"
+edition = "2021"
 
-members = [
-  "cracking_codes",
-  "chapter_00",
-  "chapter_01",
-  "chapter_02",
-  "chapter_02_a",
-  "chapter_02_b",
-  "common_collections",
-]
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[dependencies]
+
